[gd_scene load_steps=3 format=3 uid="uid://cvoh7facaktul"]

[ext_resource type="Script" path="res://ui/level_menus/practice_level_menu.gd" id="1_1mcai"]
[ext_resource type="StyleBox" uid="uid://cog3w4py5hdys" path="res://ui/components/button_container_stylebox.tres" id="2_oi5m2"]

[node name="PracticeLevelMenu" type="Panel"]
process_mode = 2
custom_minimum_size = Vector2(640, 330)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mcai")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Level Practiced!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="HorizontalNavigation" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_oi5m2")

[node name="Prev" type="Button" parent="MarginContainer/VBoxContainer/HorizontalNavigation"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "Prev
"
alignment = 0

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer/HorizontalNavigation"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 48
text = "Next"
alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="DepthNavigation" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_oi5m2")

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer/DepthNavigation"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "Menu"
alignment = 0

[node name="Replay" type="Button" parent="MarginContainer/VBoxContainer/DepthNavigation"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 48
text = "Replay"
alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HorizontalNavigation/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HorizontalNavigation/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DepthNavigation/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DepthNavigation/Replay" to="." method="_on_replay_pressed"]
